--- a/Product_Landing_Page/index.html
+++ b/Product_Landing_Page/index.html
@@ -29,7 +29,7 @@
       </div>
   
       <footer>
-        <p> Shahobaz&copy; 2023</p>
+        <p> Subhasish &copy; 2023</p>
        </footer> 
 </body>
 </html>
